examples/istio-grpc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
      version: v1
  template:
    metadata:
      labels:
        app: application
        version: v1
    spec:
      containers:
        - name: application
          image: seemscloud/grpc-server:latest
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
          ports:
            - containerPort: 9000
            - containerPort: 9443
