examples/istio-grpc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  type: ClusterIP
  ports:
    - protocol: TCP
      name: grpc
      port: 9000
      targetPort: 9000
