examples/istio-grpc/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: application
spec:
  gateways:
    - application
  hosts:
    - "foo.localhost"
  http:
    - route:
        - destination:
            host: application
            port:
              number: 9000
      match:
        - uri:
            prefix: /
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: application
spec:
  selector:
    istio: ingress-gateway
  servers:
    - hosts:
        - "foo.localhost"
      port:
        name: grpc
        number: 80
        protocol: GRPC
    - hosts:
        - "foo.localhost"
      port:
        name: HTTPS
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: application-tls
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
